Correction de la mise en page de l'acceuil (alignement du footer)

--- a/codeInitial/css/styleAcceuil.css
+++ b/codeInitial/css/styleAcceuil.css
@@ -32,7 +32,7 @@ main{
   }
 
 .msgBienvenue{
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 /* Formulaire */
@@ -134,7 +134,6 @@ button:hover {
  .welcome-message {
   font-size: 24px;
   font-weight: bold;
-  margin-top: 20px;
   color: black;
 }
 
@@ -143,7 +142,7 @@ button:hover {
   display: flex;
   flex-direction: row;
   gap: 10px;
-  margin-top: 100px;
+  margin-top: 20px;
   background-color: #f7f7f7;
 }
 
